Improved widget style; added some notes in footer

--- a/css/widget.css
+++ b/css/widget.css
@@ -1,29 +1,23 @@
-html {
-	background: #eeeeee;
-}
-body {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-   font-size: 14px;
-	background: #bbb;
-   color: #333333;
-}
-article {
+#box-shadow {
 	width: 720px;
-	margin: 0 auto;
-	background: #555;
+	margin: 10px auto;
+	/* background: #555; */
+	background: url(../img/black_linen_v2.png) #444;
 	border-radius: 10px;
 	border: 1px solid #cccccc;
 	padding: 10px;
+	font-family: Helvetica, Arial, Sans-Serif;
 }
 #sample-box-panel {
 	height: 164px;
-	background: #ffffff;
+	background: #ffffff url(../img/old_mathematics.png);
 	border: 1px solid gray;
+	margin-bottom: 10px;
 }
 #sample-box {
-	width: 128px;
-	height: 128px;
-	margin: 0 auto 80px;
+	width: 100px;
+	height: 100px;
+	margin: 32px auto;
 	background: #aaaa00;
 }
 #controls {
@@ -31,6 +25,11 @@ article {
 	float: left;
 	background: #444;
 	color: #eee;
+	padding: 5px;
+	font-size: 12px;
+}
+#controls div {
+	margin: 0px 0px;
 }
 #controls label {
 	float: left;
@@ -43,9 +42,9 @@ article {
 }
 #css-output {
 	margin-left: 1em;
-	/* float: right; */
 	width: 30em;
 	font-family: monospace;
 	background: #000;
 	color: orange;
+	border: 1px solid white;
 }
