--- a/css/widget.css
+++ b/css/widget.css
@@ -1,18 +1,17 @@
 #box-shadow {
 	width: 720px;
 	margin: 10px auto;
-	/* background: #555; */
-	background: url(../img/black_linen_v2.png) #444;
-	border-radius: 10px;
-	border: 1px solid #cccccc;
 	padding: 10px;
 	font-family: Helvetica, Arial, Sans-Serif;
+	background: url(../img/black_linen_v2.png) #444;
+	border: 1px solid #cccccc;
+	border-radius: 10px;
 }
 #sample-box-panel {
 	height: 164px;
-	background: #ffffff url(../img/old_mathematics.png);
 	border: 1px solid gray;
 	margin-bottom: 10px;
+	background: #ffffff url(../img/old_mathematics.png);
 }
 #sample-box {
 	width: 100px;
@@ -21,11 +20,11 @@
 	background: #aaaa00;
 }
 #controls {
-	width: 15em;
+	width: 200px;
 	float: left;
+	padding: 5px;
 	background: #444;
 	color: #eee;
-	padding: 5px;
 	font-size: 12px;
 }
 #controls div {
@@ -41,8 +40,8 @@
 	color: orange;
 }
 #css-output {
-	margin-left: 1em;
-	width: 30em;
+	margin-left: 10px;
+	width: 480px;
 	font-family: monospace;
 	background: #000;
 	color: orange;
