--- a/css/page.css
+++ b/css/page.css
@@ -1,6 +1,6 @@
 *  { margin: 0; padding: 0; }
 html {
-	background: #ddd url(../img/bright_squares.png);
+	background: #999 ;/* url(../img/bright_squares.png); */
 }
 footer {
 	font-family: 'Coustard', serif;
