Validation of blur radius, a first draft

--- a/css/widget.css
+++ b/css/widget.css
@@ -44,6 +44,18 @@
 	color: orange;
 	border-color: gray;
 }
+#controls > div {
+	position: relative;
+}
+#controls * .error {
+	position: absolute;
+	width: 50em;
+	height: 10em;
+	display: none;
+}
+#controls .error .error {
+	display: block;
+}
 #css-output {
 	margin-left: 10px;
 	width: 470px;
